--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ junitVersion = "1.1.5"
 ktx = "1.12.0"
 material = "1.11.0"
 
+retrofitAdaptersResult = "1.0.9"
 room = "2.6.1"
 navComponent = "2.7.5"
 
@@ -38,6 +39,7 @@ material = { module = "com.google.android.material:material", version.ref = "mat
 
     #Retrofit
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit-adapters-result = { module = "com.github.skydoves:retrofit-adapters-result", version.ref = "retrofitAdaptersResult" }
 retrofitGsonConverter = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 okHttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okHttp" }
 okHttp-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okHttp" }
